Kubernetes-for-the-Absolute-Beginners-Hands-on/YAML-Files/namespace-examples.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: development
  labels:
    env: dev
